Adicionado conf para laptop

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -39,6 +39,11 @@ shade4 = ${xrdb:color6:#fff}
 shade5 = ${xrdb:color4:#fff}
 shade6 = ${xrdb:color0:#fff}
 
+arrow_right = ${xrdb:color0:#fff}
+arrow_a = ${xrdb:color4:#fff}
+arrow_b = ${xrdb:color6:#fff}
+arrow_left = ${xrdb:color0:#fff}
+
 trans = #00000000
 white = #FFFFFF
 black = #000000
@@ -69,6 +74,48 @@ blue-gray = #6D8895
 ;; ================================================
 ;; Separator Modules
 ;; ================================================
+[module/base_arrow]
+type = custom/text
+
+content = "%{T5}%{T-}"
+content-padding = 0
+
+[module/arrow_a_l]
+inherit = module/base_arrow
+
+content-foreground = ${color.arrow_a}
+content-background = ${color.bg}
+
+[module/arrow_b_l]
+inherit = module/base_arrow
+
+content-foreground = ${color.arrow_b}
+content-background = ${color.bg}
+
+[module/arrow_a]
+inherit = module/base_arrow
+
+content-foreground = ${color.arrow_b}
+content-background = ${color.arrow_a}
+
+[module/arrow_b]
+inherit = module/base_arrow
+
+content-foreground = ${color.arrow_b}
+content-background = ${color.arrow_a}
+
+[module/arrow_a_r]
+inherit = module/base_arrow
+
+content-foreground = ${color.bg}
+content-background = ${color.arrow_b}
+
+[module/arrow_b_r]
+inherit = module/base_arrow
+
+content-foreground = ${color.bg}
+content-background = ${color.arrow_b}
+
 [module/r1]
 type = custom/text
 
@@ -305,7 +352,7 @@ content-padding = 1
 [module/change_brightness]
 type = custom/script
 
-exec = ~/.config/polybar/scripts/change-brightness.sh
+exec = printf "%.0f" "$(light)"
 interval = 1
 
 format = <label>
@@ -358,7 +405,8 @@ format-muted-foreground = ${color.red}
 format-muted-padding = 1
 
 label-muted = ""
-label-muted-foreground = ${color.fg}
+label-muted-foreground = ${color.bg}
+label-muted-background = ${color.shade4}
 
 ramp-volume-0 = 
 ramp-volume-1 = 
@@ -405,6 +453,50 @@ content-foreground = ${color.bg}
 content-padding = 1
 
 click-left = gnome-calendar
+
+;; ================================================
+[module/battery]
+type = internal/battery
+
+full-at = 99
+
+battery = BAT0
+adapter = ADP1
+
+poll-interval = 5
+
+format-charging = <animation-charging> <label-charging>
+format-charging-foreground = ${color.fg}
+format-charging-background = ${color.shade2}
+format-charging-padding = 1
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-foreground = ${color.fg}
+format-discharging-background = ${color.shade2}
+format-discharging-padding = 1
+
+ramp-capacity-0 = 󱃍
+ramp-capacity-1 = 󰁺
+ramp-capacity-2 = 󰁻
+ramp-capacity-3 = 󰁼
+ramp-capacity-4 = 󰁽
+ramp-capacity-5 = 󰁾
+ramp-capacity-6 = 󰁿
+ramp-capacity-7 = 󰂀
+ramp-capacity-8 = 󰂂
+ramp-capacity-9 = 󰁹
+
+animation-charging-0 = 󰁺
+animation-charging-1 = 󰁻
+animation-charging-2 = 󰁼
+animation-charging-3 = 󰁽
+animation-charging-4 = 󰁾
+animation-charging-5 = 󰁿
+animation-charging-6 = 󰂀
+animation-charging-7 = 󰂂
+animation-charging-8 = 󰁹
+animation-charging-framerate = 500
+
 
 ;; ================================================
 [module/i3]
@@ -470,8 +562,8 @@ content-foreground = ${color.bg}
 content-padding = 0.5
 
 ;; ================================================
-;; Bar Settings
-[bar/main]
+;; Bar Base Settings
+[bar/base]
 monitor = ${env:MONITOR:}
 monitor-strict = false
 
@@ -511,21 +603,18 @@ font-2 = "xos4 Terminus:size=11;2"
 font-3 = "Material Design Icons:size=11;3"
 font-4 = "Iosevka:style=Medium:size=17;5"
 
+dim-value = 1.0
+
+enable-ipc = true
+
+;; ================================================
+;; Bar Desktop Settings
+[bar/main]
+inherit = bar/base
+
 modules-left = i3
 modules-center =  title
 modules-right = r1 network_down_i network_down network_up_i network_up r2 weather_i weather r3 change_brightness_i change_brightness r4 pulseaudio_i pulseaudio change_audio_i r5 date_i date r6
-
-dim-value = 1.0
-
-;tray-position = right
-;tray-detached = false
-;tray-maxsize = 16
-;tray-background = ${color.shade6}
-;
-;tray-offset-x = 0
-;tray-offset-y = 0
-;tray-padding = 0
-;tray-scale = 1.0
 
 tray-position = right
 tray-padding = 2
@@ -535,55 +624,38 @@ tray-offset-y = 0
 tray-scale = 1
 tray-background = ${color.shade6}
 
-enable-ipc = true
-
 [bar/secondary]
-monitor = ${env:MONITOR:}
-monitor-strict = false
-
-override-redirect = false
-
-fixed-center = true
-
-width = 100%
-height = ${bar_settings.height}
-
-offset-x = 0
-offset-y = 0
-
-background = ${color.bg}
-foreground = ${color.fg}
-
-radius-top = 0.0
-radius-bottom = 0.0
-
-underline-size = 2
-underline-color = ${color.ac}
-
-overline-size = 2
-overline-color = ${color.ac}
-
-border-size = 4
-border-color = ${color.bg}
-
-padding = 1
-
-module-margin-left = 0
-module-margin-right = 0
-
-font-0 = "Iosevka:size=10;2"
-font-1 = "Material:size=11;2"
-font-2 = "xos4 Terminus:size=11;2"
-font-3 = "Material Design Icons:size=11;2"
-font-4 = "Iosevka:style=Medium:size=17;5"
+inherit = bar/base
 
 modules-left = i3
 modules-center =  title
 modules-right = r1 cpu_i cpu r2 memory_i memory r3 filesystem_i filesystem r4 gpu_utilization_i gpu_utilization
 
-dim-value = 1.0
+;; ================================================
+;; Bar Notebook Settings
+[bar/main_notebook]
+inherit = bar/base
 
-enable-ipc = true
+modules-left = i3
+modules-center =  title
+modules-right = r1 cpu_i cpu r2 memory_i memory r3 change_brightness_i change_brightness r4 pulseaudio_i pulseaudio change_audio_i r5 date_i date r4 battery arrow_b_r
+
+tray-position = right
+tray-padding = 2
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-scale = 1
+tray-background = ${color.shade6}
+
+[bar/secondary_notebook]
+inherit = bar/base
+
+modules-left = i3
+modules-center =  title
+modules-right = r1 network_down_i network_down network_up_i network_up r2 weather_i weather r3 filesystem_i filesystem
+
+
 
 ;; ================================================
 ;;
