changed battery module foreground color

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -466,12 +466,12 @@ adapter = ADP1
 poll-interval = 5
 
 format-charging = <animation-charging> <label-charging>
-format-charging-foreground = ${color.fg}
+format-charging-foreground = ${color.bg}
 format-charging-background = ${color.shade2}
 format-charging-padding = 1
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-foreground = ${color.fg}
+format-discharging-foreground = ${color.bg}
 format-discharging-background = ${color.shade2}
 format-discharging-padding = 1
 
@@ -496,7 +496,6 @@ animation-charging-6 = 󰂀
 animation-charging-7 = 󰂂
 animation-charging-8 = 󰁹
 animation-charging-framerate = 500
-
 
 ;; ================================================
 [module/i3]
@@ -654,7 +653,6 @@ inherit = bar/base
 modules-left = i3
 modules-center =  title
 modules-right = r1 network_down_i network_down network_up_i network_up r2 weather_i weather r3 filesystem_i filesystem
-
 
 
 ;; ================================================
