added network interface passing via environent variable to the polybar secondary bar

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -270,7 +270,7 @@ tail = false
 [module/network_up]
 type = internal/network
 
-interface = enp3s0
+interface = ${env:NET_IF:wlo1}
 interval = 1.0
 
 accumulate-stats = true
@@ -292,7 +292,7 @@ label-disconnected = "No Internet :c"
 [module/network_down]
 type = internal/network
 
-interface = enp3s0
+interface = ${env:NET_IF:wlo1}
 interval = 1.0
 
 accumulate-stats = true
