siplified arrow colors

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -32,13 +32,6 @@ fg-alt = ${xrdb:color7:#222}
 mf = ${xrdb:color0:#222}
 ac = ${xrdb:color13:#222}
 
-shade1 = ${xrdb:color4:#fff}
-shade2 = ${xrdb:color6:#fff}
-shade3 = ${xrdb:color4:#fff}
-shade4 = ${xrdb:color6:#fff}
-shade5 = ${xrdb:color4:#fff}
-shade6 = ${xrdb:color0:#fff}
-
 arrow_right = ${xrdb:color0:#fff}
 arrow_a = ${xrdb:color4:#fff}
 arrow_b = ${xrdb:color6:#fff}
@@ -95,8 +88,8 @@ content-background = ${color.bg}
 [module/arrow_a]
 inherit = module/base_arrow
 
-content-foreground = ${color.arrow_b}
-content-background = ${color.arrow_a}
+content-foreground = ${color.arrow_a}
+content-background = ${color.arrow_b}
 
 [module/arrow_b]
 inherit = module/base_arrow
@@ -108,62 +101,13 @@ content-background = ${color.arrow_a}
 inherit = module/base_arrow
 
 content-foreground = ${color.bg}
-content-background = ${color.arrow_b}
+content-background = ${color.arrow_a}
 
 [module/arrow_b_r]
 inherit = module/base_arrow
 
 content-foreground = ${color.bg}
 content-background = ${color.arrow_b}
-
-[module/r1]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade1}
-content-background = ${color.bg}
-content-padding = 0
-
-[module/r2]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade2}
-content-background = ${color.shade1}
-content-padding = 0
-
-[module/r3]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade3}
-content-background = ${color.shade2}
-content-padding = 0
-
-[module/r4]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade4}
-content-background = ${color.shade3}
-content-padding = 0
-
-[module/r5]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade5}
-content-background = ${color.shade4}
-content-padding = 0
-
-[module/r6]
-type = custom/text
-
-content = "%{T5}%{T-}"
-content-foreground = ${color.shade6}
-content-background = ${color.shade5}
-content-padding = 0
-
 
 ;; ================================================
 ;; Usage Modules
@@ -174,7 +118,7 @@ type = internal/cpu
 interval = 1
 
 format = <label>
-format-background = ${color.shade1}
+format-background = ${color.arrow_a}
 format-foreground = ${color.bg}
 format-padding = 1
 
@@ -185,7 +129,7 @@ type = custom/text
 
 content = 
 content-foreground = ${color.bg}
-content-background = ${color.shade1}
+content-background = ${color.arrow_a}
 content-padding = 1
 
 ;; ================================================
@@ -195,7 +139,7 @@ type = internal/memory
 interval = 3
 
 format = <label>
-format-background = ${color.shade2}
+format-background = ${color.arrow_b}
 format-foreground = ${color.bg}
 format-padding = 1
 
@@ -206,7 +150,7 @@ type = custom/text
 
 content = 
 content-foreground =${color.bg}
-content-background = ${color.shade2}
+content-background = ${color.arrow_b}
 content-padding = 1
 
 ;; ================================================
@@ -218,12 +162,12 @@ interval = 10
 fixed-values = true
 
 format-mounted = <label-mounted>
-format-mounted-background = ${color.shade3}
+format-mounted-background = ${color.arrow_a}
 format-mounted-foreground = ${color.bg}
 format-mounted-padding = 1
 
 format-unmounted = <label-unmounted>
-format-unmounted-background = ${color.shade3}
+format-unmounted-background = ${color.arrow_a}
 format-unmounted-foreground = ${color.bg}
 format-unmounted-padding = 1
 
@@ -235,7 +179,7 @@ type = custom/text
 
 content = 
 content-foreground =${color.bg}
-content-background = ${color.shade3}
+content-background = ${color.arrow_a}
 content-padding = 1
 
 ;; ================================================
@@ -247,7 +191,7 @@ exec = ~/.config/polybar/scripts/nvidia-smi.sh
 label = "%output:3%%"
 
 format-padding = 1
-format-background = ${color.shade4}
+format-background = ${color.arrow_b}
 format-foreground = ${color.bg}
 
 tail = false
@@ -257,7 +201,7 @@ interval = 10
 type = custom/text
 
 content = 
-content-background = ${color.shade4}
+content-background = ${color.arrow_b}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -277,12 +221,12 @@ accumulate-stats = true
 unknown-as-up = true
 
 format-connected = <label-connected>
-format-connected-background = ${color.shade1}
+format-connected-background = ${color.arrow_a}
 format-connected-foreground = ${color.bg}
 format-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.shade1}
+format-disconnected-background = ${color.arrow_a}
 format-disconnected-foreground = ${color.bg}
 format-disconnected-padding = 1
 
@@ -299,12 +243,12 @@ accumulate-stats = true
 unknown-as-up = true
 
 format-connected = <label-connected>
-format-connected-background = ${color.shade1}
+format-connected-background = ${color.arrow_a}
 format-connected-foreground = ${color.bg}
 format-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.shade1}
+format-disconnected-background = ${color.arrow_a}
 format-disconnected-foreground = ${color.bg}
 format-disconnected-padding = 1
 
@@ -315,7 +259,7 @@ label-disconnected = "No Internet :c"
 type = custom/text
 
 content = 
-content-background = ${color.shade1}
+content-background = ${color.arrow_a}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -323,7 +267,7 @@ content-padding = 1
 type = custom/text
 
 content = 
-content-background = ${color.shade1}
+content-background = ${color.arrow_a}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -334,7 +278,7 @@ type = custom/script
 exec = ~/.config/polybar/scripts/weather.sh
 
 format-padding = 1
-format-background = ${color.shade2}
+format-background = ${color.arrow_b}
 format-foreground = ${color.bg}
 
 tail = false
@@ -344,7 +288,7 @@ interval = 600
 type = custom/text
 
 content = °C
-content-background = ${color.shade2}
+content-background = ${color.arrow_b}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -358,7 +302,7 @@ interval = 1
 format = <label>
 
 format-padding = 1
-format-background = ${color.shade3}
+format-background = ${color.arrow_a}
 format-foreground = ${color.bg}
 
 label = %output%%
@@ -369,7 +313,7 @@ tail = false
 type = custom/text
 
 content = 󰃞
-content-background = ${color.shade3}
+content-background = ${color.arrow_a}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -383,12 +327,12 @@ use-ui-max = true
 interval = 5
 
 format-volume = <label-volume>
-format-volume-background = ${color.shade4}
+format-volume-background = ${color.arrow_b}
 format-volume-foreground = ${color.bg}
 format-volume-padding = 1
 
 label-muted = Muted
-format-muted-background = ${color.shade4}
+format-muted-background = ${color.arrow_b}
 format-muted-foreground = ${color.bg}
 format-muted-padding = 1
 
@@ -396,7 +340,7 @@ format-muted-padding = 1
 type = internal/alsa
 
 format-volume = <ramp-volume>
-format-volume-background = ${color.shade4}
+format-volume-background = ${color.arrow_b}
 format-volume-foreground = ${color.bg}
 format-volume-padding = 1
 
@@ -406,7 +350,7 @@ format-muted-padding = 1
 
 label-muted = ""
 label-muted-foreground = ${color.bg}
-label-muted-background = ${color.shade4}
+label-muted-background = ${color.arrow_b}
 
 ramp-volume-0 = 
 ramp-volume-1 = 
@@ -422,7 +366,7 @@ type = custom/text
 click-left = ~/.config/polybar/scripts/change-audio.sh
 
 content = 
-content-background = ${color.shade4}
+content-background = ${color.arrow_b}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -438,7 +382,7 @@ date = %d/%m
 time = %H:%M
 
 format = <label>
-format-background = ${color.shade5}
+format-background = ${color.arrow_a}
 format-foreground = ${color.bg}
 format-padding = 1
  
@@ -448,7 +392,7 @@ label = %date% %time%
 type = custom/text
 
 content = 
-content-background = ${color.shade5}
+content-background = ${color.arrow_a}
 content-foreground = ${color.bg}
 content-padding = 1
 
@@ -467,12 +411,12 @@ poll-interval = 5
 
 format-charging = <animation-charging> <label-charging>
 format-charging-foreground = ${color.bg}
-format-charging-background = ${color.shade2}
+format-charging-background = ${color.arrow_b}
 format-charging-padding = 1
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-foreground = ${color.bg}
-format-discharging-background = ${color.shade2}
+format-discharging-background = ${color.arrow_b}
 format-discharging-padding = 1
 
 ramp-capacity-0 = 󱃍
@@ -613,7 +557,7 @@ inherit = bar/base
 
 modules-left = i3
 modules-center =  title
-modules-right = r1 network_down_i network_down network_up_i network_up r2 weather_i weather r3 change_brightness_i change_brightness r4 pulseaudio_i pulseaudio change_audio_i r5 date_i date r6
+modules-right = arrow_a_l network_down_i network_down network_up_i network_up arrow_b weather_i weather arrow_a change_brightness_i change_brightness arrow_b pulseaudio_i pulseaudio change_audio_i arrow_a date_i date arrow_a_r
 
 tray-position = right
 tray-padding = 2
@@ -628,7 +572,7 @@ inherit = bar/base
 
 modules-left = i3
 modules-center =  title
-modules-right = r1 cpu_i cpu r2 memory_i memory r3 filesystem_i filesystem r4 gpu_utilization_i gpu_utilization
+modules-right = arrow_a_l cpu_i cpu arrow_b memory_i memory arrow_a filesystem_i filesystem arrow_b gpu_utilization_i gpu_utilization arrow_b_r
 
 ;; ================================================
 ;; Bar Notebook Settings
@@ -637,7 +581,7 @@ inherit = bar/base
 
 modules-left = i3
 modules-center =  title
-modules-right = r1 cpu_i cpu r2 memory_i memory r3 change_brightness_i change_brightness r4 pulseaudio_i pulseaudio change_audio_i r5 date_i date r4 battery arrow_b_r
+modules-right = arrow_a_l cpu_i cpu arrow_b memory_i memory arrow_a change_brightness_i change_brightness arrow_b pulseaudio_i pulseaudio change_audio_i arrow_a date_i date arrow_b battery arrow_b_r
 
 tray-position = right
 tray-padding = 2
@@ -652,7 +596,7 @@ inherit = bar/base
 
 modules-left = i3
 modules-center =  title
-modules-right = r1 network_down_i network_down network_up_i network_up r2 weather_i weather r3 filesystem_i filesystem
+modules-right = arrow_a_l network_down_i network_down network_up_i network_up arrow_b weather_i weather arrow_a filesystem_i filesystem arrow_a_r
 
 
 ;; ================================================
