--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -296,6 +296,22 @@ content-padding = 1
 [module/change_brightness]
 type = custom/script
 
+exec = ~/.config/polybar/scripts/change-brightness.sh
+interval = 1
+
+format = <label>
+
+format-padding = 1
+format-background = ${color.arrow_a}
+format-foreground = ${color.bg}
+
+label = %output%%
+
+tail = false
+
+[module/change_brightness_notebook]
+type = custom/script
+
 exec = printf "%.0f" "$(light)"
 interval = 1
 
@@ -565,7 +581,7 @@ tray-detached = false
 tray-offset-x = 0
 tray-offset-y = 0
 tray-scale = 1
-tray-background = ${color.shade6}
+tray-background = ${color.bg}
 
 [bar/secondary]
 inherit = bar/base
@@ -581,7 +597,7 @@ inherit = bar/base
 
 modules-left = i3
 modules-center =  title
-modules-right = arrow_a_l cpu_i cpu arrow_b memory_i memory arrow_a change_brightness_i change_brightness arrow_b pulseaudio_i pulseaudio change_audio_i arrow_a date_i date arrow_b battery arrow_b_r
+modules-right = arrow_a_l cpu_i cpu arrow_b memory_i memory arrow_a change_brightness_i change_brightness_notebook arrow_b pulseaudio_i pulseaudio change_audio_i arrow_a date_i date arrow_b battery arrow_b_r
 
 tray-position = right
 tray-padding = 2
