--- a/configs/i3/config
+++ b/configs/i3/config
@@ -271,8 +271,8 @@ mode "$show_scratchpad" {
 # ===========================================
 # System handling mode
 # ===========================================
-set $mode_system System (l)ock, l(o)gout, (s)i3lockspend
-bindsym $mod+Pause mode "$mode_system"
+set $mode_system System (l)ock, l(o)gout, (s)uspend
+bindsym $mod+shift+F1 mode "$mode_system"
 mode "$mode_system" {
     bindsym l exec --no-startup-id /home/rodrigo/.config/i3/scripts/i3lock-script.sh, mode "default"
     bindsym o exec --no-startup-id i3-msg exit, mode "default"
