added rocketchat to the scratchpad and fixed misconfiguration with the polybar notebook main bar

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -605,7 +605,7 @@ tray-detached = false
 tray-offset-x = 0
 tray-offset-y = 0
 tray-scale = 1
-tray-background = ${color.shade6}
+tray-background = ${color.bg}
 
 [bar/secondary_notebook]
 inherit = bar/base
