--- a/configs/i3/config
+++ b/configs/i3/config
@@ -199,6 +199,7 @@ for_window [title="Steam - News*"] floating enable
 for_window [title="Steam - News*"] floating enable
 for_window [class="Gnome-calendar"] floating enable
 for_window [title="About Mozilla Firefox"] floating enable
+for_window [title="Android Emulator*"] floating enable
 
 
 # ===========================================
@@ -229,6 +230,7 @@ for_window [class="Spotify"] move window to scratchpad focus
 for_window [class="Sublime_text"] move window to scratchpad focus
 for_window [class="Slack" window_role="browser-window"] move window to scratchpad focus
 for_window [class="Joplin"] move window to scratchpad focus
+for_window [class="Rocket.Chat"] move window to scratchpad focus
 
 # Define the shortcut for opening the above defined window
 set $create_scratchpad Create Scratchpad: [s]potify s[u]blime s[l]ack [j]oplin
@@ -239,6 +241,7 @@ mode "$create_scratchpad" {
         bindsym u exec subl; mode default
         bindsym l exec slack; mode default
         bindsym j exec /home/rodrigo/.joplin/Joplin.AppImage; mode default
+        bindsym r exec rocketchat-desktop; mode default
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -262,7 +265,8 @@ mode "$show_scratchpad" {
         bindsym u [class="Sublime_text"] scratchpad show; mode default
         bindsym l [class="Slack" window_role="browser-window"] scratchpad show; mode default
         bindsym j [class="Joplin"] scratchpad show; mode default
-        
+        bindsym r [class="Rocket.Chat"] scratchpad show; mode default
+
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
