--- a/configs/picom/picom.conf
+++ b/configs/picom/picom.conf
@@ -5,8 +5,10 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g ?= 'polybar'",
-  "class_g ?= 'i3-frame'"
+  "class_g ?= 'i3-frame'",
+  "class_g ?= 'Firefox' && argb"
 ];
+
 shadow-radius = 7;
 shadow-offset-x = -3;
 shadow-offset-y = -3;
