--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,10 @@
       glob: false
       path: configs/bash/.bashrc
 
+    ~/.tmux.conf:
+      glob: false
+      path: configs/tmux/.tmux.conf
+
     ~/.config/i3/:
       glob: true
       path: configs/i3/*
@@ -36,6 +40,7 @@
     ~/.config/nvim/:
       glob: true
       path: configs/nvim/*
+
 
     ~/.config/ranger/:
       glob: true
