--- a/configs/i3/config
+++ b/configs/i3/config
@@ -147,6 +147,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id wal -R
+exec --no-startup-id $HOME/.config/i3/scripts/mouse_accel.sh
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/picom_start.sh
 exec_always --no-startup-id xset +fp /home/rodrigo/.local/share/fonts/
