--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -25,3 +25,10 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jabirali/tmux-tilish'
+
+run '~/.tmux/plugins/tpm/tpm'
+
