--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -2,3 +2,6 @@ set vcs_aware true
 
 set vcs_backend_git local
 default_linemode devicons
+
+set preview_images true
+set preview_images_method ueberzug
