--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -337,7 +337,7 @@ content-padding = 1
 [module/pulseaudio]
 type = internal/pulseaudio
 
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
+sink = alsa_output.pci-0000_0a_00.3.analog-stereo
 use-ui-max = true
 
 interval = 5
