--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -25,6 +25,10 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
+# Set the current dir as default
+bind M-c attach-session -c "#{pane_current_path}"
+# bind M-c lsk
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
