--- a/configs/tmuxinator/inova-defesa.yml
+++ b/configs/tmuxinator/inova-defesa.yml
@@ -1,48 +1,7 @@
 # /home/rodrigo/.config/tmuxinator/inova-defesa.yml
 
-name: inova-defesa
+name: conecta
 root: ~/programations/granter/inova-defesa/
-
-# Optional tmux socket
-# socket_name: foo
-
-# Note that the pre and post options have been deprecated and will be replaced by
-# project hooks.
-
-# Project hooks
-
-# Runs on project start, always
-# on_project_start: command
-
-# Run on project start, the first time
-# on_project_first_start: command
-
-# Run on project start, after the first time
-# on_project_restart: command
-
-# Run on project exit ( detaching from tmux session )
-# on_project_exit: command
-
-# Run on project stop
-# on_project_stop: command
-
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
-
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
-# Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: editor
-
-# Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
 
 windows:
   - frontend-editor:
@@ -54,8 +13,12 @@ windows:
       root: ~/programations/granter/inova-defesa/frontend/inova-frontend
       layout: even-horizontal
       panes:
-        - yarn dev
-        - git status
+        - yarn: 
+          - nix develop
+          - yarn dev
+        - git:
+          - nix develop
+          - git status
 
   - backend-editor:
       root: ~/programations/granter/inova-defesa/backend/inova-backend
@@ -67,10 +30,11 @@ windows:
       layout: even-horizontal
       panes:
         - phx_server:
-          - export DEV_DB_USERNAME=horus
-          - export DEV_DB_PASSWORD=horus
+          - nix develop
           - MIX_ENV=dev mix phx.server
-        - git status
+        - git:
+          - nix develop
+          - git status
 
   - infra-editor:
       root: ~/programations/granter/inova-defesa/infra/inova-infra
