--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
+background = #151f21
 background-alt = #373B41
 foreground = #C5C8C6
 primary = #F0C674
@@ -28,10 +28,16 @@ disabled = #707880
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 24pt
+height = 18pt
 radius = 6
 
-; dpi = 96
+tray-position = right
+tray-padding = 2
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-scale = 1
+tray-background = ${color.backgound}
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -49,10 +55,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = "Iosevka:size=10;2"
 
 modules-left = i3 xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio memory cpu wlan eth weather date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -104,6 +110,35 @@ reverse-scroll = false
 
 format = <label-state> <label-mode>
 
+label-focused = %index%
+label-focused-foreground = ${color.secondary}
+label-focused-background = ${xrdb:color4:#222}
+label-focused-padding = 1
+
+label-unfocused = %index%
+label-unfocused-foreground = ${color.foreground}
+label-unfocused-background = ${color.background}
+label-unfocused-padding = 1
+
+label-visible = %index%
+label-visible-foreground = ${color.background}
+label-visible-background = ${xrdb:color2:#222}
+label-visible-padding = 1
+
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${xrdb:color3:#222}
+label-mode-foreground = ${color.background}
+
+label-urgent = %index%
+label-urgent-foreground = ${color.foreground}
+label-urgent-background = ${color.alert}
+label-urgent-padding = 1
+
+; label-separator = |
+; label-separator-padding = 0
+; label-separator-foreground = ${color.backgound}
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
@@ -130,6 +165,21 @@ label-volume = %percentage%%
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+
+[module/weather]
+type = custom/script
+
+label = "%output%°C"
+exec = "sh ~/.config/polybar/scripts/weather.sh"
+
+format-prefix = "TEMP "
+format-prefix-foreground = ${colors.primary}
+
+format-background = ${color.background}
+format-foreground = ${color.foreground}
+
+tail = false
+interval = 600
 
 [module/xkeyboard]
 type = internal/xkeyboard
