--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -25,19 +25,14 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-[bar/example]
+; =====================================
+;  Bars definitions
+; =====================================
+[bar/base]
 monitor = ${env:MONITOR:}
 width = 100%
 height = 18pt
 radius = 6
-
-tray-position = right
-tray-padding = 2
-tray-detached = false
-tray-offset-x = 0
-tray-offset-y = 0
-tray-scale = 1
-tray-background = ${color.backgound}
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -56,51 +51,58 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = "Iosevka:size=10;2"
-
-modules-left = i3 xwindow
-modules-right = filesystem pulseaudio memory cpu wlan eth weather date
+font-1 = "FiraMonoNerdFont:size=12;3"
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
 wm-restack = i3
 override-redirect = false
 
+[bar/center]
+inherit = bar/base
+
+tray-position = right
+tray-padding = 2
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-scale = 1
+tray-background = ${color.backgound}
+
+modules-left = i3 xwindow
+modules-right = memory cpu pulseaudio weather date
+
+[bar/left]
+inherit = bar/base
+
+modules-left = i3 xwindow
+modules-right = wlan eth filesystem date
+
+[bar/right]
+inherit = bar/base
+
+modules-left = i3 xwindow
+modules-right = date
+
+
+; =====================================
+;  Modules definitions
+; =====================================
 [module/systray]
 type = internal/tray
 
 format-margin = 8pt
 tray-spacing = 16pt
 
-; [module/xworkspaces]
-; type = internal/xworkspaces
-;
-; label-active = %name%
-; label-active-background = ${colors.background-alt}
-; label-active-underline= ${colors.primary}
-; label-active-padding = 1
-;
-; label-occupied = %name%
-; label-occupied-padding = 1
-;
-; label-urgent = %name%
-; label-urgent-background = ${colors.alert}
-; label-urgent-padding = 1
-;
-; label-empty = %name%
-; label-empty-foreground = ${colors.disabled}
-; label-empty-padding = 1
-
 [module/i3]
 type = internal/i3
 
 pin-workspaces = true
-strip-wsnumbers = true
-index-sort = true
+; strip-wsnumbers = true
+; index-sort = true
 
 enable-click = true
 enable-scroll = true
@@ -121,17 +123,17 @@ label-unfocused-background = ${color.background}
 label-unfocused-padding = 1
 
 label-visible = %index%
-label-visible-foreground = ${color.background}
+label-visible-foreground = ${color.secondary}
 label-visible-background = ${xrdb:color2:#222}
 label-visible-padding = 1
 
-label-mode = %mode%
-label-mode-padding = 2
-label-mode-background = ${xrdb:color3:#222}
-label-mode-foreground = ${color.background}
+; label-mode = %mode%
+; label-mode-padding = 1
+; label-mode-background = ${xrdb:color3:#222}
+; label-mode-foreground = ${color.background}
 
 label-urgent = %index%
-label-urgent-foreground = ${color.foreground}
+label-urgent-foreground = ${color.secondary}
 label-urgent-background = ${color.alert}
 label-urgent-padding = 1
 
@@ -149,7 +151,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#F0C674}MNT %mountpoint%%{F-} %free%%{F#F0C674}/%{F-}%total%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -222,7 +224,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-} | %{F#F0C674}UP%{F-} %upspeed% %{F#F0C674}DOWN%{F-} %downspeed% %{F#F0C674}NET%{F-} %netspeed%
 
 [module/date]
 type = internal/date
