--- a/configs/tmuxinator/dotfiles.yml
+++ b/configs/tmuxinator/dotfiles.yml
@@ -1,49 +1,16 @@
-# /home/rodrigo/.config/tmuxinator/inova-defesa.yml
+# /home/rodrigo/.config/tmuxinator/dotfiles.yml
 
-name: conecta
-root: ~/programations/granter/inova-defesa/
+name: dotfiles
+root: ~/programations/dotfiles-verdadeiro/
 
 windows:
-  - frontend-editor:
-      root: ~/programations/granter/inova-defesa/frontend/inova-frontend
+  - editor:
+      root: ~/programations/dotfiles-verdadeiro/
       panes:
         - nvim .
 
-  - frontend-term:
-      root: ~/programations/granter/inova-defesa/frontend/inova-frontend
-      layout: even-horizontal
-      panes:
-        - yarn: 
-          - nix develop
-          - yarn dev
-        - git:
-          - nix develop
-          - git status
-
-  - backend-editor:
-      root: ~/programations/granter/inova-defesa/backend/inova-backend
-      panes:
-        - nvim .
-
-  - backend-term:
-      root: ~/programations/granter/inova-defesa/backend/inova-backend
-      layout: even-horizontal
-      panes:
-        - phx_server:
-          - nix develop
-          - MIX_ENV=dev mix phx.server
-        - git:
-          - nix develop
-          - git status
-
-  - infra-editor:
-      root: ~/programations/granter/inova-defesa/infra/inova-infra
-      panes:
-        - nvim .
-
-  - infra-term:
-      root: ~/programations/granter/inova-defesa/infra/inova-infra
-      layout: even-horizontal
+  - term:
+      root: ~/programations/dotfiles-verdadeiro/
       panes:
         - git status
 
